syntax = "proto3";

package pb;

import "entities/order.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message OrderScanRequest {
  string code = 1;
}

message OrderScanResponse {
  int32 code = 1;
  string message = 2;
  Order details = 3;
}